removed text mixins

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           <div class='moo-field'>
             <label>Tooltip</label>
             <div id='radiobtn'>
-              <span id='tooltipTest'>Show me the tooltip!</span>
+              <spantooltipTest>Show me the tooltip!</spantooltipTest>
             </div>
           </div>
         </form>
