fixed minor css bugs

--- a/index.html
+++ b/index.html
@@ -51,77 +51,9 @@
               <textarea id='txta1' name='textarea1' placeholder='Ingrese su texto aqui'></textarea>
             </div>
           </div>
-          <!--
-            <div class='moo-field'>
-              <label>Select menu</label>
-              <div class='moo-ui-select-container top'>
-                <a class='moo-ui-select-link' href=''>&#9660;</a>
-                <div class='moo-ui-select-menu' style='height: 217px;'>
-                  <ul class='moo-ui-select-list' style='height: 200px;'>
-                    <li>Item 1</li>
-                    <li>This is some other item listed</li>
-                    <li>Third item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                  </ul>
-                </div>
-                <select id='select1' style='display: none'>
-                  <option>Text 1</option>
-                  <option>Text 2</option>
-                  <option>Text 3</option>
-                  <option>Text 4</option>
-                </select>
-              </div>
-            </div>
-            <div class='moo-field'>
-              <label>Multiple select menu</label>
-              <div class='moo-ui-select-container multiple bottom'>
-                <a class='moo-ui-select-link' href=''>&#9660;</a>
-                <div class='moo-ui-select-menu' style='height: 217px;'>
-                  <ul class='moo-ui-select-list' style='height: 200px;'>
-                    <li>Item 1</li>
-                    <li>This is some other item listed</li>
-                    <li class='selected'>Third item</li>
-                    <li class='selected'>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                    <li>some random item</li>
-                  </ul>
-                </div>
-                <select id='select1' multiple='multiple' style='display: none'>
-                  <option>Text 1</option>
-                  <option>Text 2</option>
-                  <option>Text 3</option>
-                  <option>Text 4</option>
-                </select>
-              </div>
-            </div>
-          -->
           <div class='moo-field'>
             <label>Select menu</label>
-            <div class='moo-ui-select-container top'>
+            <div class='moo-ui-select-container moo-top'>
               <span class='moo-ui-select-link' href=''>&#9660;</span>
               <div class='moo-ui-select-menu' style='height: 217px;'>
                 <ul class='moo-ui-select-list' id='moo-ui-select-1' style='height: 200px;'>
@@ -154,7 +86,7 @@
           </div>
           <div class='moo-field'>
             <label>Multiple select menu</label>
-            <div class='moo-ui-select-container multiple bottom'>
+            <div class='moo-ui-select-container-multiple moo-bottom'>
               <a class='moo-ui-select-link' href=''>&#9660;</a>
               <div class='moo-ui-select-menu' style='height: 217px;'>
                 <ul class='moo-ui-select-list' style='height: 200px;'>
