--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src='js/mootor.js' type='text/javascript'></script>
   <script src='js/plugins/nav.js' type='text/javascript'></script>
   <script src='js/plugins/app.js' type='text/javascript'></script>
+  <script src='js/plugins/ui.js' type='text/javascript'></script>
 </head>
 <body class='main'>
   <header class='moo-header' id='header'>
@@ -23,6 +24,7 @@
         <a class='moo-nav' href='' rel='data'>Data</a>
         <a class='moo-nav' href='' rel='graph'>Graph</a>
         <a class='moo-nav' href='' rel='carousel'>Carousel</a>
+        <a href='http://localhost/xampp/'>External</a>
       </nav>
     </div>
     <div class='moo-panel' id='ui'></div>
@@ -68,7 +70,7 @@
            });
            
            // Preload a view
-           myApp.load(myApp.views[0], myNav.get("ui"));           
+           // myApp.load(myApp.views[0], myNav.get("ui"));           
                                   
        });
   //]]>
