Improvements, delete old plugins, add PhoneGap experiment, add "on" core method
* Delete old plugins (geo, type)
* Add PhoneGap experiment (take/choose pictures)
* Core: Add "on" event, "bind" deprecated
* Nav: code improvements

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
     <div class='moo-panel' id='item2'></div>
     <div class='moo-panel' id='geolocalization'>
       <h2>Geolocalization</h2>
-      <h3>This module is not activated. See $.geolocation</h3>
+      <h3>This demo is not implemented yet.</h3>
     </div>
     <div class='moo-panel' id='data'>
       <h2>Data</h2>
-      <h3>This module is not implemented yet.</h3>
+      <h3>This demo is not implemented yet.</h3>
     </div>
     <div class='moo-panel' id='graph'>
       <h2>Graph</h2>
-      <h3>This module is not implemented yet.</h3>
+      <h3>This demo is not implemented yet.</h3>
     </div>
     <div class='moo-panel' id='carousel'>
       <h2>Carousel</h2>
-      <h3>This module is not implemented yet.</h3>
+      <h3>This demo is not implemented yet.</h3>
     </div>
   </div>
 </body>
