--- a/index-modal.html
+++ b/index-modal.html
@@ -244,17 +244,22 @@
     -->
   </div>
   <div class='moo-overlay'></div>
-  <div class='moo-ui-modal-container'>
-    <div class='moo-ui-modal-panel'>
-      <h1 class='moo-title'>Titulo del modal</h1>
-      <p class='moo-text'>P&aacute;rrafo explicativo, puede tener varios renglones.</p>
-      <div class='moo-buttons'>
-        <a class='moo-ui-cancel'>
-          Cancelar
-        </a>
-        <a class='moo-ui-submit'>
-          Aceptar
-        </a>
+  <div class='moo-ui-modal-placeholder'>
+    <div class='moo-ui-modal-container'>
+      <header class='moo-ui-modal-header'>
+        <h1>Alert overlay</h1>
+      </header>
+      <div class='moo-ui-modal-panel'>
+        <h2 class='moo-title'>T&iacute;ulo del texto</h2>
+        <p class='moo-text'>P&aacute;rrafo explicativo, puede tener varios renglones.</p>
+        <div class='moo-buttons'>
+          <a class='moo-ui-cancel'>
+            Cancelar
+          </a>
+          <a class='moo-ui-submit'>
+            Aceptar
+          </a>
+        </div>
       </div>
     </div>
   </div>
