PhoneGap experiments, mixin for borderBox on normalize.scss, Nav/UI code improvements and bugfixes.

--- a/index-phonegap.html
+++ b/index-phonegap.html
@@ -4,6 +4,7 @@
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' name='viewport' />
   <link href='css/styles.css' media='screen' rel='stylesheet' />
   <script src='js/mootor.js' type='text/javascript'></script>
+  <script src='js/plugins/ui.js' type='text/javascript'></script>
   <script src='phonegap/cordova-1.9.0.js' type='text/javascript'></script>
 </head>
 <body class='main'>
@@ -18,7 +19,6 @@
       <nav>
         <a class='moo-nav' href='' rel='nav'>Nav</a>
         <a class='moo-nav' href='' rel='ui'>UI</a>
-        <a class='moo-nav' href='' rel='geolocalization'>Geolocalization</a>
         <a class='moo-nav' href='' rel='picture'>Picture</a>
       </nav>
     </div>
@@ -26,10 +26,6 @@
     <div class='moo-panel' id='nav'></div>
     <div class='moo-panel' id='item1'></div>
     <div class='moo-panel' id='item2'></div>
-    <div class='moo-panel' id='geolocalization'>
-      <h2>Geolocalization</h2>
-      <h3>This module is not activated. See $.geolocation</h3>
-    </div>
     <div class='moo-panel' id='picture'></div>
   </div>
 </body>
