--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <script src='js/plugins/ui.js' type='text/javascript'></script>
 </head>
 <body class='main'>
-  <header class='moo-header' id='header'>
-    <h1>Mootor demo</h1>
+  <header class='moo-header' id='moo-header'>
+    <h1>Mootor</h1>
     <nav>
       <a class='moo-nav-back' href='' rel='back'>Back</a>
     </nav>
@@ -69,7 +69,7 @@
            });
            
            // Preload a view
-           // myApp.load(myApp.views[0], myNav.get("ui"));           
+           myApp.load(myApp.views[0], myNav.get("ui"));           
                                   
        });
   //]]>
