Updated comments for YUIDoc

--- a/examples/index.html
+++ b/examples/index.html
@@ -52,7 +52,7 @@
                     "nav",
                     "item1",
                     "item2",
-                    "gestures",
+                    "gestures"
                ],
                nav: myNav
            });
@@ -61,7 +61,7 @@
            myApp.load(
                 myApp.get("ui"),
                 myNav.get("ui")
-           );           
+           );                  
                                   
        });
        
