Added "onChange" event for UI.camera, bugfixes.

--- a/examples/index.html
+++ b/examples/index.html
@@ -14,7 +14,7 @@
   <header id='moo-header'>
     <h1>Mootor demo</h1>
     <nav>
-      <a class='moo-nav-back' href='#moo-nav-back'>Back</a>
+      <a class='moo-nav-back'>Back</a>
     </nav>
   </header>
   <div class='moo-panels' id='main'>
