Bugfixes on Gestures, UI, Core. Added Nav.Footer. Updated examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -23,6 +23,7 @@
     <div class='moo-panel' id='ui'></div>
     <div class='moo-panel' id='core'></div>
     <div class='moo-panel' id='core_selector'></div>
+    <div class='moo-panel' id='core_ready'></div>
     <div class='moo-panel' id='nav'></div>
     <div class='moo-panel' id='fx'></div>
     <div class='moo-panel' id='app'></div>
