Finished examples for Core, Gestures, Fx, UI.Checkbox, UI.Map

--- a/examples/index.html
+++ b/examples/index.html
@@ -19,14 +19,35 @@
   </header>
   <div id='main'>
     <div class='moo-panel' id='index'></div>
+    <div class='moo-panel' id='core'></div>
+    <div class='moo-panel' id='core_ajax'></div>
+    <div class='moo-panel' id='core_context'></div>
+    <div class='moo-panel' id='core_extend'></div>
+    <div class='moo-panel' id='core_find'></div>
+    <div class='moo-panel' id='core_hasclass'></div>
+    <div class='moo-panel' id='core_hide'></div>
+    <div class='moo-panel' id='core_html'></div>
+    <div class='moo-panel' id='core_on'></div>
+    <div class='moo-panel' id='core_ready'></div>
+    <div class='moo-panel' id='core_removeclass'></div>
+    <div class='moo-panel' id='core_require'></div>
+    <div class='moo-panel' id='core_selector'></div>
+    <div class='moo-panel' id='core_setclass'></div>
+    <div class='moo-panel' id='core_show'></div>
+    <div class='moo-panel' id='core_unbind'></div>
+    <div class='moo-panel' id='fx'></div>
+    <div class='moo-panel' id='fx_translate'></div>
     <div class='moo-panel' id='gestures'></div>
     <div class='moo-panel' id='ui'></div>
+    <div class='moo-panel' id='ui_checkbox'></div>
     <div class='moo-panel' id='ui_map'></div>
-    <div class='moo-panel' id='core'></div>
-    <div class='moo-panel' id='core_selector'></div>
-    <div class='moo-panel' id='core_ready'></div>
-    <div class='moo-panel' id='nav'></div>
-    <div class='moo-panel' id='fx'></div>
-    <div class='moo-panel' id='app'></div>
+    <div class='moo-panel' id='ui_option'></div>
+    <div class='moo-panel' id='ui_overlay'></div>
+    <div class='moo-panel' id='ui_select'></div>
+    <div class='moo-panel' id='ui_text'></div>
+    <div class='moo-panel' id='ui_textarea'></div>
+    <div class='moo-panel' id='ui_toggleswitch'></div>
+    <div class='moo-panel' id='ui_camera'></div>
+    <div class='moo-panel' id='ui_simplecamera'></div>
   </div>
 </body>
