--- a/examples/index.html
+++ b/examples/index.html
@@ -8,6 +8,7 @@
   <script src='../js/plugins/nav.js' type='text/javascript'></script>
   <script src='../js/plugins/app.js' type='text/javascript'></script>
   <script src='../js/plugins/ui.js' type='text/javascript'></script>
+  <script src='../js/plugins/geo.js' type='text/javascript'></script>
   <script src='js/app.js' type='text/javascript'></script>
 </head>
 <body class='main'>
@@ -38,6 +39,7 @@
     <div class='moo-panel' id='fx'></div>
     <div class='moo-panel' id='fx_translate'></div>
     <div class='moo-panel' id='gestures'></div>
+    <div class='moo-panel' id='geo'></div>
     <div class='moo-panel' id='ui'></div>
     <div class='moo-panel' id='ui_checkbox'></div>
     <div class='moo-panel' id='ui_map'></div>
