buttons in progress

--- a/examples/index-modal.html
+++ b/examples/index-modal.html
@@ -20,24 +20,30 @@
   </header>
   <div id='main'>
     <div class='moo-panel' id='ui_modal'>
-      <div class='moo-ui-modal-container'>
-        <header class='moo-ui-modal-header'>
-          <h1>Modal alert</h1>
-        </header>
-        <div class='moo-ui-modal-panel'>
-          <h2 class='moo-title'>
-            Titulo del texto
-          </h2>
-          <p class='moo-text'>
-            Parrafo explicativo, puede tener varios renglones
-          </p>
-          <div class='moo-buttons'>
-            <a class='moo-ui-cancel'>
-              Cancelar
-            </a>
-            <a class='moo-ui-submit'>
-              Aceptar
-            </a>
+      <div class='moo-overlay'></div>
+      <p>parrafo de prueba lorem ipsum dolor sit amet.</p>
+      <p>parrafo de prueba lorem ipsum dolor sit amet.</p>
+      <p>parrafo de prueba lorem ipsum dolor sit amet.</p>
+      <div class='moo-ui-form'>
+        <div class='moo-ui-modal-container hidden'>
+          <header class='moo-ui-modal-header'>
+            <h1>Modal alert</h1>
+          </header>
+          <div class='moo-ui-modal-panel'>
+            <h2 class='moo-title'>
+              Titulo del texto
+            </h2>
+            <p class='moo-text'>
+              Parrafo explicativo, puede tener varios renglones
+            </p>
+            <div class='moo-buttons'>
+              <a class='button cancel'>
+                Cancelar
+              </a>
+              <a class='button submit'>
+                Aceptar
+              </a>
+            </div>
           </div>
         </div>
       </div>
