- Deleted unused files. Improvements on default styles

--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,6 @@
   <title>Mootor sample app</title>
   <meta content='width=device-width,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' name='viewport' />
   <link href='css/styles.css' media='screen' rel='stylesheet' />
-  <link href='css/dev.css' media='screen' rel='stylesheet' />
   <script src='../js/mootor.js' type='text/javascript'></script>
   <script src='../js/plugins/nav.js' type='text/javascript'></script>
   <script src='../js/plugins/app.js' type='text/javascript'></script>
@@ -16,7 +15,7 @@
     <nav>
       <a class='moo-nav-back' href='#moo-nav-back' id='navBack'>Back</a>
     </nav>
-    <h1>Sample app</h1>
+    <h1>Mootor demo</h1>
   </header>
   <div id='main'>
     <div class='moo-panel' id='index'></div>
