CSS refactoring, bugfixes. + Boost movement for Nav.Panel + example

--- a/examples/index.html
+++ b/examples/index.html
@@ -50,5 +50,6 @@
     <div class='moo-panel' id='ui_toggleswitch'></div>
     <div class='moo-panel' id='ui_camera'></div>
     <div class='moo-panel' id='ui_simplecamera'></div>
+    <div class='moo-panel' id='nav_scroll'></div>
   </div>
 </body>
