Draft for new architecture

--- a/examples/index.html
+++ b/examples/index.html
@@ -3,11 +3,19 @@
 	<title>Mootor sample app</title>
 	<meta content='width=device-width,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' name='viewport' />
 	<script type="text/javascript" src="../dist/js/zepto.js"></script>
-	<script type="text/javascript" src="../dist/js/mootor.js"></script>
-	<link rel="stylesheet" type="text/css" href="../dist/css/mootor.css">
 
+    <!-- Uncomment this line for production app example 
+	<script type="text/javascript" src="../dist/js/mootor.js"></script>
+    -->
+
+	<script type="text/javascript" src="../source/js/app/app.js"></script>
+	<script type="text/javascript" src="../source/js/app/panel.js"></script>
+	<script type="text/javascript" src="../source/js/app/view.js"></script>    
 	<script type="text/javascript" src="app.js"></script>
+
+	<link rel="stylesheet" type="text/css" href="../dist/css/mootor.css">
 	<link rel="stylesheet" type="text/css" href="app.css">
+
 </head>
 <body class='main'>
   <div id='main'>
