Small fixes in App. View now according to spec.

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,9 +8,9 @@
 	<script type="text/javascript" src="../dist/js/mootor.js"></script>
     -->
 
-	<script type="text/javascript" src="../source/js/app/app.js"></script>
-	<script type="text/javascript" src="../source/js/app/panel.js"></script>
-	<script type="text/javascript" src="../source/js/app/view.js"></script>    
+	<script type="text/javascript" src="../source/js/app.js"></script>
+	<script type="text/javascript" src="../source/js/panel.js"></script>
+	<script type="text/javascript" src="../source/js/view.js"></script>    
 	<script type="text/javascript" src="app.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="../dist/css/mootor.css">
