--- a/examples/index.html
+++ b/examples/index.html
@@ -8,9 +8,19 @@
 	<script type="text/javascript" src="../dist/js/mootor.js"></script>
     -->
 
+	<script type="text/javascript" src="../source/js/mootor.js"></script>
 	<script type="text/javascript" src="../source/js/app.js"></script>
-	<script type="text/javascript" src="../source/js/panel.js"></script>
+	<script type="text/javascript" src="../source/js/ui.js"></script>    
 	<script type="text/javascript" src="../source/js/view.js"></script>    
+	<script type="text/javascript" src="../source/js/uipanel.js"></script>
+	<script type="text/javascript" src="../source/js/uiview.js"></script>    
+	<script type="text/javascript" src="../source/js/uiapp.js"></script>    
+	<script type="text/javascript" src="../source/js/router.js"></script>    
+	<script type="text/javascript" src="../source/js/route.js"></script>    
+	<script type="text/javascript" src="../source/js/uinavbar.js"></script>    
+	<script type="text/javascript" src="../source/js/uinavitem.js"></script>    
+	<script type="text/javascript" src="../source/js/uiheader.js"></script>    
+	<script type="text/javascript" src="../source/js/uiloading.js"></script>    
 	<script type="text/javascript" src="app.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="../dist/css/mootor.css">
