Improvements on test Specs, organized in modules. Documentation review, updated doc

--- a/source/spec/SpecRunner.html
+++ b/source/spec/SpecRunner.html
@@ -13,11 +13,16 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../../dist/js/zepto.js"></script>
-  <script type="text/javascript" src="../js/app/app.js"></script>
-  <script type="text/javascript" src="../js/app/panel.js"></script>
-  <script type="text/javascript" src="../js/app/view.js"></script>   
+  <script type="text/javascript" src="../js/app.js"></script>
+  <!-- 
+  <script type="text/javascript" src="../js/panel.js"></script>
+  <script type="text/javascript" src="../js/view.js"></script>   
+      -->
   <!-- include spec files here... -->
-  <script type="text/javascript" src="fullSpec.js"></script>
+  <script type="text/javascript" src="AppSpec.js"></script>
+  <!-- <script type="text/javascript" src="MootorSpec.js"></script>
+  <script type="text/javascript" src="ViewSpec.js"></script>
+  <script type="text/javascript" src="UIPanelSpec.js"></script>-->
 
 </head>
 
