--- a/source/spec/SpecRunner.html
+++ b/source/spec/SpecRunner.html
@@ -13,16 +13,16 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../../dist/js/zepto.js"></script>
+  <script type="text/javascript" src="../js/mootor.js"></script>
   <script type="text/javascript" src="../js/app.js"></script>
-  <!-- 
-  <script type="text/javascript" src="../js/panel.js"></script>
-  <script type="text/javascript" src="../js/view.js"></script>   
-      -->
-  <!-- include spec files here... -->
+  <script type="text/javascript" src="../js/view.js"></script>
+  <script type="text/javascript" src="../js/ui.js"></script>
+  <script type="text/javascript" src="../js/uiapp.js"></script>
+  <script type="text/javascript" src="../js/uiview.js"></script>
+  <script type="text/javascript" src="../js/router.js"></script>
+  <script type="text/javascript" src="../js/route.js"></script>
+  <!--       -->
   <script type="text/javascript" src="AppSpec.js"></script>
-  <!-- <script type="text/javascript" src="MootorSpec.js"></script>
-  <script type="text/javascript" src="ViewSpec.js"></script>
-  <script type="text/javascript" src="UIPanelSpec.js"></script>-->
 
 </head>
 
