--- a/source/spec/SpecRunner.html
+++ b/source/spec/SpecRunner.html
@@ -23,6 +23,8 @@
   <script type="text/javascript" src="../js/route.js"></script>
   <!--       -->
   <script type="text/javascript" src="AppSpec.js"></script>
+  <script type="text/javascript" src="ViewSpec.js"></script>
+  <script type="text/javascript" src="UIPanelSpec.js"></script>
 
 </head>
 
