Fixes in appSpec (I don't know what happens with the doc)

--- a/source/spec/blank.html
+++ b/source/spec/blank.html
@@ -25,7 +25,7 @@
 </head>
 <body class='main'>
 	<script type="text/javascript">
-m.app({views: ["index"]}); m.app.on("init",function() {console.log("init")})
+m.app({views: ["index"]}).on("init",function() {console.log("init")}).init();
 </script>    
   <div id='main'>
   </div>
