Added empty specs for UI classes

--- a/source/spec/SpecRunner.html
+++ b/source/spec/SpecRunner.html
@@ -28,6 +28,14 @@
   <script type="text/javascript" src="UIPanelSpec.js"></script>
   <script type="text/javascript" src="MootorSpec.js"></script>
   <script type="text/javascript" src="RouterSpec.js"></script>
+  <script type="text/javascript" src="RouteSpec.js"></script>
+  <script type="text/javascript" src="UISpec.js"></script>
+  <script type="text/javascript" src="UIAppSpec.js"></script>
+  <script type="text/javascript" src="UIViewSpec.js"></script>
+  <script type="text/javascript" src="UILoadingSpec.js"></script>
+  <script type="text/javascript" src="UINavItemSpec.js"></script>
+  <script type="text/javascript" src="UINavBarSpec.js"></script>
+  <script type="text/javascript" src="UIHeaderSpec.js"></script>
 </head>
 
 <body>
