+ UI, UIView, UIPanel (draft)

--- a/source/spec/index.html
+++ b/source/spec/index.html
@@ -9,8 +9,8 @@
   <script type="text/javascript" src="../js/view.js"></script>
   <script type="text/javascript" src="../js/ui.js"></script>
   <script type="text/javascript" src="../js/uiapp.js"></script>
-  <script type="text/javascript" src="../js/uipanel.js"></script>
   <script type="text/javascript" src="../js/uiview.js"></script>
+  <script type="text/javascript" src="../js/uipanel.js"></script>
   <script type="text/javascript" src="../js/router.js"></script>
   <script type="text/javascript" src="../js/route.js"></script>
 
@@ -18,7 +18,7 @@
 
 <body>
     <script type="text/javascript">
-    m.app({views: ["index"]}).on("init", function() {
+    m.app({views: ["index", "testview"]}).on("init", function() {
         console.log("init")
     }).init();
     </script>
