--- a/source/spec/index.html
+++ b/source/spec/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../../dist/css/mootor.css">
 
   <script type="text/javascript" src="../../dist/js/zepto.js"></script>
   <script type="text/javascript" src="../js/mootor.js"></script>
