CSS classname changes Now App has UIApp with panels.

--- a/source/css/classes-doc-part.html
+++ b/source/css/classes-doc-part.html
@@ -11,7 +11,7 @@
     This is the document
 	    <div class="m-app" style="position: absolute; left: 200px; top: 100px; height: 600px; width: 300px;">
 	    	.m-app absolutely positioned
-			<div class="m-panel-container">
+			<div class="m-views-container">
 				.m-panel-container
 				<div class="m-panel m-transition-slide">
 					.m-panel index
