--- a/source/css/classes-doc.html
+++ b/source/css/classes-doc.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="m-doc m-app-html"> <!-- m-doc class is only used in documentation -->
+<html class="m-doc m-html"> <!-- m-doc class is only used in documentation -->
     <head>
         <meta charset="utf-8">
         <meta name="description" content="Mootor CSS Classes documentation">
@@ -9,7 +9,7 @@
     </head>
     <body class="m-app">
     	.m-app
-		<div class="m-panel-container">
+		<div class="m-views-container">
 			.m-panel-container
 			<div class="m-panel m-transition-slide">
 				.m-panel index
