--- a/source/spec/blank.html
+++ b/source/spec/blank.html
@@ -1,4 +1,6 @@
+
 <!DOCTYPE html>
+<html>
 <head>
 	<title>Mootor sample app</title>
 	<meta content='width=device-width,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' name='viewport' />
