--- a/source/spec/index.html
+++ b/source/spec/index.html
@@ -7,6 +7,8 @@
 
   <script type="text/javascript" src="../../dist/js/zepto.js"></script>
   <script type="text/javascript" src="../js/mootor.js"></script>
+  <script type="text/javascript" src="../js/event.js"></script>
+  <script type="text/javascript" src="../js/context.js"></script>
   <script type="text/javascript" src="../js/app.js"></script>
   <script type="text/javascript" src="../js/view.js"></script>
   <script type="text/javascript" src="../js/ui.js"></script>
