--- a/source/spec/SpecRunner.html
+++ b/source/spec/SpecRunner.html
@@ -6,6 +6,7 @@
 
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.0.0/jasmine_favicon.png">
   <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.0/jasmine.css">
+  <link rel="stylesheet" type="text/css" href="../../dist/css/mootor.css">
 
   <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine-html.js"></script>
@@ -42,5 +43,7 @@
 </head>
 
 <body>
+    <div id="container" style="width: 250px; height: 350px;">
+    </div>
 </body>
 </html>
