--- a/source/spec/index.html
+++ b/source/spec/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta content='width=device-width,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' name='viewport'>
+  <meta content='yes' name='apple-mobile-web-app-capable'>
   <link rel="stylesheet" href="../../dist/css/mootor.css">
+  <link rel="stylesheet" href="css/semantic.css">
 
   <script type="text/javascript" src="../../dist/js/zepto.js"></script>
   <script type="text/javascript" src="../js/mootor.js"></script>
