+ Zepto touch module. + Improvement on test app

--- a/source/spec/index.html
+++ b/source/spec/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/semantic.css">
 
   <script type="text/javascript" src="../../dist/js/zepto.js"></script>
+  <script type="text/javascript" src="../../dist/js/zepto-touch.js"></script>
   <script type="text/javascript" src="../js/mootor.js"></script>
   <script type="text/javascript" src="../js/event.js"></script>
   <script type="text/javascript" src="../js/context.js"></script>
