--- a/files/router.js.html
+++ b/files/router.js.html
@@ -172,7 +172,9 @@
         * Create a route
         *
         * @method route
-        * @param {object} options TODO: Define this object&#x27;s properties
+        * @param {string} url Regular expresion string
+        * @param {string} url URL to route
+        * @param {View} view View object
         * @return Route
         */
         route: function(url, view) {
