Adding overthrow to fix scroll

--- a/source/spec/SpecRunner.html
+++ b/source/spec/SpecRunner.html
@@ -15,6 +15,8 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../../dist/js/zepto.js"></script>
+  <script type="text/javascript" src="../js/overthrow.min.js"></script>
+
   <script type="text/javascript" src="../js/mootor.js"></script>
   <script type="text/javascript" src="../js/event.js"></script>
   <script type="text/javascript" src="../js/context.js"></script>
