--- a/source/spec/index.html
+++ b/source/spec/index.html
@@ -14,6 +14,7 @@
 
   <script type="text/javascript" src="../../dist/js/zepto.js"></script>
   <script type="text/javascript" src="../../dist/js/zepto-touch.js"></script>
+  <script type="text/javascript" src="../js/overthrow.min.js"></script>
   <script type="text/javascript" src="../js/mootor.js"></script>
   <script type="text/javascript" src="../js/event.js"></script>
   <script type="text/javascript" src="../js/context.js"></script>
