+ UIHeader working OK

--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -21,6 +21,8 @@
   <script type="text/javascript" src="../../source/js/uiapp.js"></script>
   <script type="text/javascript" src="../../source/js/uiview.js"></script>
   <script type="text/javascript" src="../../source/js/uipanel.js"></script>  
+  <script type="text/javascript" src="../../source/js/uinavbar.js"></script>  
+  <script type="text/javascript" src="../../source/js/uiheader.js"></script>  
   <script type="text/javascript" src="../../source/js/router.js"></script>
   <script type="text/javascript" src="../../source/js/route.js"></script>
 
@@ -29,7 +31,7 @@
 <body>
     
     <header>
-        <h1>Test app</h1>
+        <h1>Field</h1>
     </header>
     
     <script type="text/javascript">
