+ UIHeader implementation and specs, Event specs, bugfix on specs for View:init, + Zepto detect.

--- a/source/spec/SpecRunner.html
+++ b/source/spec/SpecRunner.html
@@ -15,6 +15,7 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../../dist/js/zepto.js"></script>
+  <script type="text/javascript" src="../../dist/js/zepto-detect.js"></script>
   <script type="text/javascript" src="../js/overthrow.min.js"></script>
 
   <script type="text/javascript" src="../js/mootor.js"></script>
@@ -26,6 +27,8 @@
   <script type="text/javascript" src="../js/uiapp.js"></script>
   <script type="text/javascript" src="../js/uiview.js"></script>
   <script type="text/javascript" src="../js/uipanel.js"></script>
+  <script type="text/javascript" src="../js/uinavbar.js"></script>
+  <script type="text/javascript" src="../js/uiheader.js"></script>
   <script type="text/javascript" src="../js/router.js"></script>
   <script type="text/javascript" src="../js/route.js"></script>
   
@@ -52,6 +55,9 @@
 
 <body>
     <div id="container" style="width: 250px; height: 350px;">
+        <header>
+            <h1>Spec app</h1>
+        </header>
     </div>
 </body>
 </html>
