+ Bugfix on View/UIPanel event, updated example app 'demo'

--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -31,7 +31,7 @@
 <body>
     
     <header>
-        <h1>Field</h1>
+        <h1>Demo</h1>
     </header>
     
     <script type="text/javascript">
