+ Back button working OK

--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -22,6 +22,7 @@
   <script type="text/javascript" src="../../source/js/uiview.js"></script>
   <script type="text/javascript" src="../../source/js/uipanel.js"></script>  
   <script type="text/javascript" src="../../source/js/uinavbar.js"></script>  
+  <script type="text/javascript" src="../../source/js/uinavitem.js"></script>  
   <script type="text/javascript" src="../../source/js/uiheader.js"></script>  
   <script type="text/javascript" src="../../source/js/router.js"></script>
   <script type="text/javascript" src="../../source/js/route.js"></script>
