Added uiloading functionality

--- a/examples/nootebook/index.html
+++ b/examples/nootebook/index.html
@@ -20,6 +20,7 @@
   <script type="text/javascript" src="../../source/js/ui.js"></script>
   <script type="text/javascript" src="../../source/js/uiapp.js"></script>
   <script type="text/javascript" src="../../source/js/uiview.js"></script>
+  <script type="text/javascript" src="../../source/js/uiloading.js"></script>
   <script type="text/javascript" src="../../source/js/uipanel.js"></script>  
   <script type="text/javascript" src="../../source/js/router.js"></script>
   <script type="text/javascript" src="../../source/js/route.js"></script>
