UILoading passes spec tests

--- a/source/spec/SpecRunner.html
+++ b/source/spec/SpecRunner.html
@@ -29,6 +29,7 @@
   <script type="text/javascript" src="../js/uipanel.js"></script>
   <script type="text/javascript" src="../js/uinavbar.js"></script>
   <script type="text/javascript" src="../js/uiheader.js"></script>
+  <script type="text/javascript" src="../js/uiloading.js"></script>
   <script type="text/javascript" src="../js/router.js"></script>
   <script type="text/javascript" src="../js/route.js"></script>
   
