UIView: Added registerEnhancement experiemental UIForm: Added enhancement for .m-form

--- a/examples/nootebook/index.html
+++ b/examples/nootebook/index.html
@@ -22,6 +22,7 @@
   <script type="text/javascript" src="../../source/js/uiview.js"></script>
   <script type="text/javascript" src="../../source/js/uiloading.js"></script>
   <script type="text/javascript" src="../../source/js/uipanel.js"></script>  
+  <script type="text/javascript" src="../../source/js/uiform.js"></script>  
   <script type="text/javascript" src="../../source/js/router.js"></script>
   <script type="text/javascript" src="../../source/js/route.js"></script>
 
@@ -38,22 +39,6 @@
         (function() {
 
             "use strict";
-
-            window.notes = [
-                {
-                    text: "hola"
-                },
-                {
-                    text: "chau"
-                },
-                {
-                    text: "holholholhol aholholholhol aholholholhol aholholholhol aholholholhol aholholholhol a"
-                },
-                {
-                    text: "hola"
-                }
-            ];
-
 
             var app = m.app({
                 views: [
