+ Specs for UI, UIApp, Route, UIHeader, + Updated documentation

--- a/source/spec/SpecRunner.html
+++ b/source/spec/SpecRunner.html
@@ -27,6 +27,7 @@
   <script type="text/javascript" src="../js/uiapp.js"></script>
   <script type="text/javascript" src="../js/uiview.js"></script>
   <script type="text/javascript" src="../js/uipanel.js"></script>
+  <script type="text/javascript" src="../js/uinavitem.js"></script>
   <script type="text/javascript" src="../js/uinavbar.js"></script>
   <script type="text/javascript" src="../js/uiheader.js"></script>
   <script type="text/javascript" src="../js/uiloading.js"></script>
@@ -36,22 +37,24 @@
   <!--  include specs here     -->
   <script type="text/javascript" src="AppSpec.js"></script>
   <script type="text/javascript" src="RouterSpec.js"></script>
-  <script type="text/javascript" src="ContextSpec.js"></script>
-  <script type="text/javascript" src="ViewSpec.js"></script>
-  <script type="text/javascript" src="MootorSpec.js"></script>
   <script type="text/javascript" src="RouteSpec.js"></script>
+  <script type="text/javascript" src="ViewSpec.js"></script>
+  <script type="text/javascript" src="ContextSpec.js"></script>
   <script type="text/javascript" src="EventSpec.js"></script>
   <script type="text/javascript" src="UIPanelSpec.js"></script>
   <script type="text/javascript" src="UISpec.js"></script>
   <script type="text/javascript" src="UIAppSpec.js"></script>
   <script type="text/javascript" src="UIViewSpec.js"></script>
   <script type="text/javascript" src="UILoadingSpec.js"></script>
-  <script type="text/javascript" src="UINavItemSpec.js"></script>
-  <script type="text/javascript" src="UINavBarSpec.js"></script>
+  <script type="text/javascript" src="UIHeaderSpec.js"></script>
+<!--  <script type="text/javascript" src="UINavItemSpec.js"></script>
+  <script type="text/javascript" src="UINavBarSpec.js"></script>-->
   <script type="text/javascript" src="UIFormSpec.js"></script>
   <script type="text/javascript" src="UIModalSpec.js"></script>
   <script type="text/javascript" src="UIOverlaySpec.js"></script>
   <script type="text/javascript" src="UIMapSpec.js"></script>
+
+
 </head>
 
 <body>
