--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
         #hd { display: none;}
     
     </style>
+
 </head>
 <body class="yui3-skin-sam">
 
 <header id="masthead" class="site-header" role="banner">
-			<a class="home-link" href="http://emi420.github.io/Mootor" title="Mootor Framework" rel="home">
+			<a class="home-link" href="http://mootor.mobi/" title="Mootor Framework" rel="home">
 				<h1 class="site-title">Mootor Framework</h1>
 				<h2 class="site-description">HTML5 framework for mobile application development</h2>
 			</a>
