- Remove Semantic css. + Draft for uiform. + Improvements un uipanel/uiview (move code for view.ui.el from uipanel to uiview)

--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -7,7 +7,6 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
 
   <link rel="stylesheet" href="../../dist/css/mootor.css">
-  <link rel="stylesheet" href="css/semantic.css">
 
   <script type="text/javascript" src="../../dist/js/zepto.js"></script>
   <script type="text/javascript" src="../../dist/js/zepto-touch.js"></script>
@@ -27,6 +26,10 @@
   <script type="text/javascript" src="../../source/js/uiloading.js"></script>
   <script type="text/javascript" src="../../source/js/router.js"></script>
   <script type="text/javascript" src="../../source/js/route.js"></script>
+  <script type="text/javascript" src="../../source/js/uiform.js"></script>
+  <script type="text/javascript" src="../../source/js/uiformtext.js"></script>
+
+
 
 </head>
 
