--- a/index.html
+++ b/index.html
@@ -224,9 +224,10 @@
                     <div class="content">
                         <h1>What is Mootor?</h1>
 
-		<p><strong>Mootor is an open source HTML5 frameworkfor building mobile applications based on HTML5.</strong></p>
+		<p><strong>Mootor is an open source framework for building mobile applications based on HTML5.</strong></p>
 <p>HTML5 because it’s a fast growing technology and it’s multi-platform (Android, iOS, Firefox OS, etc). Open source because a front-end tool in HTML5 can not avoid it.</p>
 <h2>Github</h2>
+<p>Download the code and get involved!</p>
 <strong><a href="https://github.com/emi420/Mootor/">https://github.com/emi420/Mootor/</a></strong>
 
 <br />
