--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -7,6 +7,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
 
   <link rel="stylesheet" href="../../dist/css/mootor.css">
+  <link rel="stylesheet" href="../../dist/css/color.css">
 
   <script type="text/javascript" src="../../dist/js/zepto.js"></script>
   <script type="text/javascript" src="../../dist/js/zepto-touch.js"></script>
