--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -49,7 +49,13 @@
 
             var app = m.app({
                 views: [
-                    "index"
+                    "index",
+                    "testview",
+                    "help",
+                    "about",
+                    "form",
+                    "buttons",
+                    "icons"
                 ]
             }).init();
     
