Fix for sprites missing compass dependency. Added index for examples/demo app Improvements in buttons, now they display properly. Fixed mootor in firefox

--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -11,6 +11,7 @@
 
   <script type="text/javascript" src="../../dist/js/zepto.js"></script>
   <script type="text/javascript" src="../../dist/js/zepto-touch.js"></script>
+  <script type="text/javascript" src="../../dist/js/zepto-detect.js"></script>
   <script type="text/javascript" src="../../source/js/overthrow.min.js"></script>
   <script type="text/javascript" src="../../source/js/mootor.js"></script>
   <script type="text/javascript" src="../../source/js/event.js"></script>
