+ Normalize CSS. Improvements for Android. Updated build script. Updated mootor dist

--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../../dist/css/color.css">
 
   <script type="text/javascript" src="../../dist/js/zepto.js"></script>
-  <script type="text/javascript" src="../../source/js/clickfix.js"></script>
+  <script type="text/javascript" src="../../dist/js/clickfix.js"></script>
   <script type="text/javascript" src="../../dist/js/zepto-touch.js"></script>
   <script type="text/javascript" src="../../dist/js/zepto-detect.js"></script>
   <script type="text/javascript" src="../../source/js/overthrow.min.js"></script>
