--- a/spec/index.html
+++ b/spec/index.html
@@ -6,7 +6,7 @@
 
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.0.0/jasmine_favicon.png">
   <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.0/jasmine.css">
-  <link rel="stylesheet" type="text/css" href="dist/css/mootor.css">
+  <link rel="stylesheet" type="text/css" href="../demo/dist/css/mootor.css">
   <link rel="stylesheet" href="css/semantic.css">
 
   <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine.js"></script>
@@ -14,26 +14,12 @@
   <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="dist/js/zepto.js"></script>
-  <script type="text/javascript" src="dist/js/zepto-detect.js"></script>
-  <script type="text/javascript" src="js/overthrow.min.js"></script>
+  <script type="text/javascript" src="../demo/dist/js/zepto.js"></script>
+  <script type="text/javascript" src="../demo/dist/js/zepto-detect.js"></script>
 
-  <script type="text/javascript" src="js/mootor.js"></script>
-  <script type="text/javascript" src="js/event.js"></script>
-  <script type="text/javascript" src="js/context.js"></script>
-  <script type="text/javascript" src="js/app.js"></script>
-  <script type="text/javascript" src="js/view.js"></script>
-  <script type="text/javascript" src="js/ui.js"></script>
-  <script type="text/javascript" src="js/uiapp.js"></script>
-  <script type="text/javascript" src="js/uiview.js"></script>
-  <script type="text/javascript" src="js/uipanel.js"></script>
-  <script type="text/javascript" src="js/uinavitem.js"></script>
-  <script type="text/javascript" src="js/uinavbar.js"></script>
-  <script type="text/javascript" src="js/uiheader.js"></script>
-  <script type="text/javascript" src="js/uiloading.js"></script>
-  <script type="text/javascript" src="js/router.js"></script>
-  <script type="text/javascript" src="js/route.js"></script>
-  
+  <script type="text/javascript" src="../demo/dist/js/mootor.js"></script>
+
+ 
   <!--  include specs here     -->
   <script type="text/javascript" src="AppSpec.js"></script>
   <script type="text/javascript" src="RouterSpec.js"></script>
